# mu-reco

./: CMakeLists.txt  README.md
cmake/: RecoConfig.cmake.in
config/: channel_map_config_files.json  channel_map_files.json  channel_map_iov.json  energy_calibration_default.json  energy_calibration_iov.json  fitters.json  g-2_channel_map.json  integrators.json  lyso_2023.json  minimum_amplitudes.json  pedestal_files.json  pedestals.json  pedestals_iov.json  reco_config.json  reco_config_demo.json  templates.json  templates_iov.json
include/reco/: LinkDef.h
include/reco/common/: ConfigHolder.hh  EventStore.hh  JsonParserUtil.hh  OutputManager.hh  PulseFitterUtil.hh  RecoManager.hh  RecoStage.hh  Service.hh  ServiceManager.hh  TemplateStage.hh  TimeProfilerService.hh
include/reco/wfd5/: CaloClusterFinder.hh  ChannelConfig.hh  ChannelMapService.hh  DetectorGrouper.hh  DigitizerTimeAligner.hh  EmptyChannelPruner.hh  EndOfEventAnalysis.hh  EnergyCalibration.hh  Fitter.hh  JitterCorrector.hh  PeakIdentifier.hh  PedestalCalculator.hh  PileupIdentifier.hh  PulseIntegrator.hh  RFFitter.hh  T0Processor.hh  TemplateFitterService.hh  TemplateLoaderService.hh  TemplateService.hh  TimeSeeder.hh  WFD5OutputManager.hh  WaveformInitializer.hh  XYPositionFinder.hh
scripts/: build.sh  fetch_channel_map.py  setenv.sh  test.json  unsetenv.sh
src/: CMakeLists.txt  main_wfd5.cc
src/common/: ConfigHolder.cc  EventStore.cc  JsonParserUtil.cc  OutputManager.cc  RecoManager.cc  RecoStage.cc  Service.cc  ServiceManager.cc  TemplateStage.cc  TimeProfilerService.cc
src/wfd5/: CaloClusterFinder.cc  ChannelConfig.cc  ChannelMapService.cc  DetectorGrouper.cc  DigitizerTimeAligner.cc  EmptyChannelPruner.cc  EndOfEventAnalysis.cc  EnergyCalibration.cc  Fitter.cc  JitterCorrector.cc  PeakIdentifier.cc  PedestalCalculator.cc  PileupIdentifier.cc  PulseIntegrator.cc  RFFitter.cc  T0Processor.cc  TemplateLoaderService.cc  TimeSeeder.cc  WFD5OutputManager.cc  WaveformInitializer.cc  XYPositionFinder.cc
